fixed some ability spacing

--- a/src/Abilities/Abilities.css
+++ b/src/Abilities/Abilities.css
@@ -18,9 +18,9 @@
 .Ability-Description {
     font-size: 1rem;
     color: black;
-    padding-bottom: 3rem;
 }
 
 .Ability-Pokemon-List-Header {
     font-size: 1.3rem;
+    margin-top: 1.5rem;
 }
